<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E2886"
    android:paddingBottom="50dp">

    <RelativeLayout
        android:id="@+id/searchScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#0B132B">

        <LinearLayout
            android:id="@+id/topBarSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            android:background="#1C2541"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/app_name"
                android:paddingStart="5dp"
                android:paddingTop="5dp"
                android:paddingEnd="200dp"
                app:srcCompat="@drawable/logo" />

            <ImageButton
                android:id="@+id/imageButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/settings_button"
                android:padding="5dp"
                app:srcCompat="@drawable/settings" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/botBarSearch"
            android:layout_below="@id/topBarSearch">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/search_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/search_button"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:srcCompat="@drawable/search_btn"
                    tools:ignore="DuplicateSpeakableTextCheck,RedundantDescriptionCheck,ImageContrastCheck" />

                <TableLayout
                    android:id="@+id/FiltersModal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#1F264C"
                    android:outlineProvider="none">

                    <TableRow
                        android:id="@+id/FiltersText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/filters"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#1F264C"
                            android:gravity="center"
                            android:text="@string/filters"
                            android:textColor="#53B9A9"
                            android:textSize="50sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/GameSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">
                        <Spinner
                            android:id="@+id/game_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_btn_bg"
                            android:contentDescription="@string/select_game"
                            android:spinnerMode="dropdown" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/RankSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingBottom="5dp">

                        <Spinner
                            android:id="@+id/rank_spinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/select_btn_bg"
                            android:contentDescription="@string/select_rank"
                            android:spinnerMode="dropdown" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/LocationRangeText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/location_range"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/filters"
                            app:srcCompat="@drawable/location_range"
                            tools:ignore="ImageContrastCheck" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/LocationSlider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <SeekBar
                            android:id="@+id/locationSeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="500"
                            android:paddingBottom="5dp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/AgeRangeText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/age_range"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/filters"
                            app:srcCompat="@drawable/age_range"
                            tools:ignore="ImageContrastCheck" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/AgeSlider"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center">

                        <SeekBar
                            android:id="@+id/ageSeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="100"
                            android:paddingBottom="5dp"
                            android:progressTint="#009688" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/botBarSearch"
            android:layout_width="409dp"
            android:layout_height="111dp"
            android:layout_alignParentBottom="true"
            android:background="#1C2541"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/home_button"
                android:padding="5dp"
                app:srcCompat="@drawable/home"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/notificationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/notification_button"
                android:padding="5dp"
                app:srcCompat="@drawable/notif"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/search_button"
                android:padding="5dp"
                app:srcCompat="@drawable/search"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/chatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/chat_button"
                android:padding="5dp"
                app:srcCompat="@drawable/message"
                tools:ignore="RedundantDescriptionCheck" />

            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/profile_button"
                android:padding="5dp"
                app:srcCompat="@drawable/profile"
                tools:ignore="RedundantDescriptionCheck" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>